tests/fsharp/typecheck/sigs/neg117.bsl

neg117.fs(79,18,79,59): ilxgen error FS0041: No overloads match for method 'Transform'. The available overloads are shown below.
neg117.fs(79,18,79,59): ilxgen error FS0041: Possible overload: 'static member Neg117.Superpower.Transformer.Transform :  ^r * Neg117.TargetA.TargetA * Neg117.Superpower.Transformer -> (Neg117.TargetA.TransformerKind ->  ^r) when (Neg117.TargetA.TargetA or  ^r) : (static member Transform :  ^r * Neg117.TargetA.TargetA -> Neg117.TargetA.TransformerKind ->  ^r)'. Type constraint mismatch. The type 
    'Neg117.TargetA.M1 Microsoft.FSharp.Core.[]'    
is not compatible with type
    ''a'    
.
neg117.fs(79,18,79,59): ilxgen error FS0041: Possible overload: 'static member Neg117.Superpower.Transformer.Transform :  ^f * Neg117.TargetB.TargetB * Neg117.Superpower.Transformer -> (Neg117.TargetB.TransformerKind ->  ^f) when (Neg117.TargetB.TargetB or  ^f) : (static member Transform :  ^f * Neg117.TargetB.TargetB -> Neg117.TargetB.TransformerKind ->  ^f)'. Type constraint mismatch. The type 
    'Neg117.TargetA.M1 Microsoft.FSharp.Core.[]'    
is not compatible with type
    ''a'    
.
